Removed info.md & Added icon